Add swagger documentation of UfsController
